k8s/game_rental_backend-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: game-retnal-backend-node-port

spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 31000

  selector:
    component: backend
    app: my-app
