k8s/game_rental_frontend-clusterip.yml
apiVersion: v1
kind: Service

metadata:
  name: game-rental-frontend-clusterip

spec:
  type: ClusterIP
  ports:
    - targetPort: 3000
      port: 3000

  selector:
    app: my-app
    component: frontend
