k8s/game_rental_frontend-node-port.yml
apiVersion: v1
kind: Service

metadata:
  name: game-rental-frontend-node-port

spec:
  type: NodePort
  ports:
    - targetPort: 3000
      port: 3000
      nodePort: 31100

  selector:
    app: my-app
    type: frontend
