k8s/myingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: localhost
      http:
        paths: 
          - path: /api/(.*)
            pathType: Prefix
            backend: 
              service: 
                name: game-rental-backend-clusterip
                port:
                  number: 5000
          - path: /(.*)
            pathType: Prefix
            backend: 
              service: 
                name: game-rental-frontend-clusterip
                port:
                  number: 3000
